--- a/Final_Presentation.ipynb
+++ b/Final_Presentation.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# <font color=#14F278> 0. Introduction</font>\n",
     "\n",
     "##### This project will take the Boston Housing dataset and use it to predict the median value of owner-occupied homes. This goal will be broken down into three tasks:\n",
     "##### - Task 1: Use sklearn to implement a gradient boosted trees model\n",
     "##### - Task 2: Implement a gradient boosted trees model from scatch\n",
-    "##### - Task 3: Conduct EDA (explatory data analysis) to select the features and settings that perform best. "
+    "##### - Task 3: Conduct EDA (explatory data analysis) to select the features and settings that perform best."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 3: EDA \n",
+    "# <font color=#14F278> 1. EDA - (Task 3)</font>\n",
     "\n",
     "##### Introduction to task.\n",
     "##### Domain knowledge and overview of data (add more detail here later)\n",
@@ -25,7 +25,7 @@
     "##### - No other racial statistics are taken into account and this one was included because the authors assumed that racial self-segregation had a positive impact on house prices. \n",
     "##### - This assumption is harmful and if this dataset was used by real-estate companies to predict and set actual housing prices, would lead to economic inequalities for people of color. \n",
     "\n",
-    "#### The code below will take you through our initial data analysis and how we selected what preprocessing needed to be done before we performed gradient boosted tree regression. "
+    "#### The code below will take you through our initial data analysis and how we selected what preprocessing needed to be done before we performed gradient boosted tree regression."
    ]
   },
   {
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initial Data Analysis: Nulls, Distributions, etc"
+    "## <font color=#14F278>1.1 Initial Data Analysis: Nulls, Distributions, etc"
    ]
   },
   {
@@ -267,9 +267,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature Selection: Correlation Heatmap, Outlier Analysis \n",
+    "## <font color=#14F278>1.2 Feature Selection: Correlation Heatmap, Outlier Analysis </font>\n",
     "\n",
-    "#### Correlation Map:"
+    "### Correlation Map:"
    ]
   },
   {
@@ -310,9 +310,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Outliers Analysis: \n",
+    "## <font color=#14F278>1.3 Outliers Analysis:</font>\n",
     "\n",
-    "#### Identification"
+    "### Identification"
    ]
   },
   {
@@ -384,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Conclusions:\n",
+    "### Conclusions:\n",
     "\n",
     "##### - When deciding what to do with outliers we need to look at our ML model. Gradient Boosted Regression Trees use thresholding on input features for decisions. This makes them less sensitive to high leverage points and outliers within the input features. \n",
     "##### - However for the output feature, Regression Trees uses variance as its cost function which is calculated with a sum of squares. This means that large outliers will appear to have even larger residuals, which will disproportionately focus the model on these points. For this reason we need to get rid of the outliers on our target feature MEDV. \n",
@@ -395,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Outlier Removal:"
+    "## <font color=#14F278>1.4 Outlier Removal:</font>"
    ]
   },
   {
@@ -480,17 +480,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 1: Gradient Boosted Tree Regression with sklearn \n",
+    "# <font color=#14F278>2. Gradient Boosted Tree Regression with sklearn - Task 1</font>\n",
     "\n",
-    "#### This task will cover the implementation of a gradient boosted tree ML model using the sklearn library, but first some background on what gradient boosted decision trees are:\n",
+    "#### This task will cover the implementation of a gradient boosted tree ML model using the sklearn library, but first some background on what gradient boosted decision trees are:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=#14F278>2.1 Decision Trees:</font>\n",
     "\n",
-    "#### Decision Trees:\n",
     "#### - A model made of decision and leaf nodes, where the decision nodes represents a threshold based on a feature, and leaf nodes are an endpoint. Decision nodes branch off into a split based on the feature. \n",
     "#### - The ML proponent of this model is optimizing the best threshold to split the data on for each decision node. Which is done with a greedy method called Binary Recursive Partioning which in regression instances uses the weighted sum of variance across both child nodes as the cost function it's minimizing.\n",
     "\n",
     "#### Introduction to sklearn's model and its components (Decision Trees), hyperparameters we needed to consider, and any other coding specific additions we kept in mind.\n",
     "\n",
     "#### The code below will take you through our implementation with sklearn.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=#14F278>2.2 Gradiant Boosting Regressor:</font>\n",
+    "\n",
+    "#### - ex  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=#14F278>2.3 GridSearchCV:</font>\n",
+    "\n",
+    "#### - ex "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=#14F278>2.4 Sklearn Model:</font>\n",
+    "\n",
+    "#### - Implementation of a gradient boosted tree ML model using the sklearn library"
    ]
   },
   {
@@ -546,11 +579,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2: Manually Implementing Gradient Boosted Tree Regression\n",
+    "# <font color=#14F278> 3. Manually Implementing Gradient Boosted Tree Regression - Task 2</font>\n",
     "\n",
     "##### Breakdown of our intial plan: Make a decision tree class, a gradient boosted class, and the other sklearn functions we needed. Include the breakdown across the team. \n",
     "\n",
-    "### Custom Functions:"
+    "## <font color=#14F278> 3.1 Custom Functions:</font>"
    ]
   },
   {
@@ -657,7 +690,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Custom Classes:"
+    "## 3.2 <font color=#14F278>Custom Classes:</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Tree"
    ]
   },
   {
@@ -855,6 +895,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Boost"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -926,7 +973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing the Implementation"
+    "## <font color=#14F278> 3.3 Testing the Implementation</font>"
    ]
   },
   {
@@ -1053,7 +1100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis Between Task 2 and 3:\n",
+    "## <font color=#14F278> 3.4 Analysis Between Task 2 and 3:</font>\n",
     "\n",
     "##### Want to analyze the two performance indicators (Go back and save the values from the performance model so we can call them here)"
    ]
@@ -1110,13 +1157,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion:\n",
+    "# <font color=#14F278>4. Conclusion:</font>\n",
     "\n",
-    "##### Overall results\n",
+    "## <font color=14F278> 4.1 Overall results</font>\n",
+    "### write here\n",
     "\n",
-    "##### Knowledge gained\n",
+    "## <font color=14F278> 4.2 Knowledge Gained</font>\n",
+    "### write here\n",
     "\n",
-    "##### Areas for improvement\n",
+    "## <font color=14F278> 4.3 Areas for Improvement</font>\n",
+    "### write here\n",
     "\n",
     "##### All of our code is available in our GitHub Repository JPM-Team-Yang (link: https://github.com/emmabland/JPM-Team-Yang), and all of our custom functions and classes are in clean .py files ready for packaging with PyPi or other software. "
    ]
