--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -595,16 +595,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 5.7591316452282975\n",
-      "MAE: 1.7759018830529032\n",
-      "R2: 0.8521063087555032\n"
+      "MSE: 13.38664297390273\n",
+      "MAE: 2.8325609799553786\n",
+      "R2: 0.6562328898275773\n"
      ]
     }
    ],
@@ -613,7 +613,7 @@
     "# Split the data\n",
     "df_scaled.reset_index(drop=True)\n",
     "df_y.reset_index(drop=True)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(df_scaled,df_y,test_size=0.2, random_state=123)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(pca_data,df_y,test_size=0.2, random_state=123)\n",
     "\n",
     "# Create, Train, Fit, Model\n",
     "model = GradientBoostAll(n_estimators=40, max_depth=3)\n",
