last changes - emma

--- a/Final_Presentation.ipynb
+++ b/Final_Presentation.ipynb
@@ -403,7 +403,11 @@
    "source": [
     "## <font color=#14F278>1.3 Outliers Analysis:</font>\n",
     "\n",
-    "### Identification"
+    "##### Two types of data points will be considered in this section, outliers and high leverage points. Outliers are data points whose target feature significantly deviate from the rest of the data, this is defined as any point 1.5 times the inter-quartile range above the upper quartile or below the lower quartile. Meanwhile high leverage points are data points with extreme predictor values in the feature space. High leverage points are often considered as outliers in the predictor space (i.e. the input features).\n",
+    "##### Outliers and high leverage points need to be considered when preprocessing data, as they can cause overfitting and distort the variability of the data. When deciding what to do with outliers we need to look at our ML model. Gradient Boosted Regression Trees use thresholding on input features for decisions, and the success of this threshold is calculated with a weighted sum of the variance between the observed and predicted value of the target feature. \n",
+    "##### As the output features are optimized with variance and its performance evaluated with MSE, both of which use a sum of square, this means that outliers within the target feature will have exponentially larger residuals, which will disproportionately focus the model on these points. For this reason we need to get rid of the outliers on our target feature MEDV. \n",
+    "\n",
+    "### Identification:"
    ]
   },
   {
@@ -1319,7 +1323,7 @@
    "outputs": [],
    "source": [
     "# K-fold Cross Validation function to perform hyperparameter tuning \n",
-    "def kfold_cv(X_train, y_train, K_folds = 5, random_state = None, n_estimators: int = 25, max_depth: int = 1, learning_rate: float =.1):\n",
+    "def kfold_cv(X_train, y_train, K_folds = 5, random_state = None, n_estimators: int = 25, max_depth: int = 1, min_leaf_size: int = 1, learning_rate: float =.1):\n",
     "    \"\"\"Uses train set to validate hyperparameters. \n",
     "    \n",
     "    Args:\n",
