header fix, few bullet points

--- a/Final_Presentation.ipynb
+++ b/Final_Presentation.ipynb
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Domain knowledge\n",
+    "## <font color=#14F278> 1.2 Domain knowledge</font>\n",
     "#### Our data set consists of data from the greater Boston metro area in the 1970s, with each row representing the resutls of a single municipality. There are a total of 14 columns, including 13 features and 1 target column, MEDV, which represents the median value in $1,000s of a home in each town. Notably, the MEDV column has values that are truncated at 50.0 - i.e. any value greater than 50 becomes 50.  There are 506 rows of data, with no nulls, and all columns are float values except CHAS and RAD (which are integers). The column descriptors are listed below: \n",
     " - ZN: proportion of residential land zoned for lots over 25k sq. ft.\n",
     " - INDUS: proportion of non-retail business acres per town\n",
@@ -590,8 +590,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Gradient boosting: \n",
+    "## <font color=#14F278> 2.2 Gradient boosting:</font>\n",
     "#### Gradient boosting is a model ensemble that allows a number of different decision trees to be combined into one model. Gradient boosting starts training a 'weak learner' - a decision tree, typically with few nodes - then makes predictions based on the training data, which are recorded as the remainder. The next model is then trained with the remainder as the target space, and the process continues. Gradient boosting helps increase the efficiency of your model by correcting errors and is robust to overfitting due to each individual tree being relatively small - it also can deal well with high leverage points due to the nature of the nodes splitting on threshold and small tree size. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=#14F278> 2.3 GridSearchCV </font>\n",
+    "\n",
+    "#### ex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=#14F278> 2.4 Sklearn Implementation</font>"
    ]
   },
   {
@@ -1002,7 +1018,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decision Tree:"
+    "### Decision Tree:\n",
+    "\n",
+    "#### Entire decision tree logic of tree building, traversal, component definition, and best feature/ best threshold selection"
    ]
   },
   {
@@ -1592,7 +1610,8 @@
     "\n",
     "## <font color=14F278> 4.3 Areas for Improvement</font>\n",
     "### - Optimizing our grid search as it currently takes about an hour to run, nested for loops are not computationally efficient. Looking into random search instead of grid search could be another solution.\n",
-    "### - \n",
+    "### - A random state that can be stored across machines, similar to sklearn\n",
+    "### - Our Gridsearch CV would have errors when trying to accept a model instance, would require future debugging\n",
     "\n",
     "##### All of our code is available in our GitHub Repository JPM-Team-Yang (link: https://github.com/emmabland/JPM-Team-Yang), and all of our custom functions and classes are in clean .py files ready for packaging with PyPi or other software. "
    ]
