added all params to sklearn gscv

--- a/Final_Presentation.ipynb
+++ b/Final_Presentation.ipynb
@@ -19,7 +19,6 @@
     "# <font color=#14F278> 1. Exploratory Data Analysis (EDA) - Task 3</font>\n",
     "\n",
     "##### Introduction to task.\n",
-    "##### Domain knowledge and overview of data (add more detail here later)\n",
     "##### Ethical Considerations:\n",
     "##### The B column refers to the proportion of black population by town. It is the only racial statistic included in the the dataset, showing clear racial targeting. The authors included this column because they assumed that racial self-segreration had a parabolic positive impact on housing prices. However researchers have shown that consensus data from the time does not support this, making it a clear example of bias in data. This assumption is harmful and if this dataset was used in any scenario outside of a training example it would lead to econmic inequalities for people of color. For these reasons it was not even considered as one of our selected features. \n",
     "\n",
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,26 +314,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CRIM -0.10226698271720312\n",
-      "ZN 0.03989715920233452\n",
-      "INDUS -0.09347155855931982\n",
+      "CRIM -0.09052841466385886\n",
+      "ZN 0.04792604258046843\n",
+      "INDUS 0.0\n",
       "CHAS 0.0\n",
       "NOX -0.0\n",
-      "RM 2.0267880443075494\n",
-      "AGE -0.033731698451440514\n",
-      "DIS -0.8439126175283435\n",
-      "RAD 0.18466619995730976\n",
-      "TAX -0.012361035311302247\n",
-      "PTRATIO -0.5221475696588187\n",
-      "B 0.007353565902341065\n",
-      "LSTAT -0.3696712501103638\n"
+      "RM 4.251788390606357\n",
+      "AGE -0.01121413777014245\n",
+      "DIS -1.1003688973581536\n",
+      "RAD 0.24572818481881312\n",
+      "TAX -0.01399154385326527\n",
+      "PTRATIO -0.7368384063444122\n",
+      "B 0.007855792467883503\n",
+      "LSTAT -0.5755092467932731\n"
      ]
     }
    ],
@@ -442,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -612,17 +611,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 7.426365444386634\n",
-      "MAE: 2.230963895220341\n",
-      "R2: 0.841519835458707\n",
-      "{'max_depth': 3, 'min_samples_leaf': 15}\n"
+      "MSE: 4.867632044045003\n",
+      "MAE: 1.7009999073849569\n",
+      "R2: 0.874999893219966\n",
+      "{'learning_rate': 0.1, 'max_depth': 2, 'min_samples_leaf': 15, 'n_estimators': 100}\n"
      ]
     }
    ],
@@ -632,13 +631,18 @@
     "y = df['MEDV']\n",
     "\n",
     "# Split data further into training and testing\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=12)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=123)\n",
     "\n",
     "# Create our model\n",
     "model = GradientBoostingRegressor()\n",
     "# Implement GridSearchCV to optimize hyper-parameters\n",
-    "params = {'min_samples_leaf':[1,5,10,15,20,25,30], 'max_depth':[2,3,4,5,6,7,8,9,10]} # Params for it to cycle through\n",
-    "clf = GridSearchCV(estimator=model, param_grid=params, cv=5, scoring= 'r2')\n",
+    "param_grid = {\n",
+    "    'n_estimators': [10, 20, 50, 100],\n",
+    "    'max_depth': [1, 2, 3, 4],\n",
+    "    'learning_rate': [0.01, 0.1, 0.2, 0.5],\n",
+    "    'min_samples_leaf': [1, 5, 10, 15]\n",
+    "} # Params for it to cycle through\n",
+    "clf = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, scoring= 'r2')\n",
     "# Fit model\n",
     "clf.fit(X_train, y_train)\n",
     "# Make predictions\n",
